--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -12,6 +12,16 @@
   margin: 20px 0px 100px 0px;
 }
 
+.headerTitle{
+  font-size: 40px;
+  /* padding-top: 10px; */
+}
+
+.headerDesc{
+  font-size: 23px;
+  margin: 20px 0px;
+}
+
 .headerContainer.listMode {
   margin: 20px 0px 0px 0px;
 }
@@ -20,6 +30,11 @@
   display: flex;
   gap: 40px;
   margin-bottom: 50px;
+}
+
+.headerListItem:hover{
+  background-color: rgba(254, 250, 250, 0.118);
+  border-radius: 5px;
 }
 
 .headerListItem {
@@ -34,9 +49,6 @@
   border-radius: 20px;
 }
 
-.headerDesc {
-  margin: 20px 0px;
-}
 
 .headerBtn {
   background-color: #0071c2;
@@ -47,7 +59,7 @@
   cursor: pointer;
 }
 
-.headerSearch {
+.headerSearch{
   height: 30px;
   background-color: white;
   border: 3px solid #febb02;
@@ -59,17 +71,22 @@
   position: absolute;
   bottom: -25px;
   width: 100%;
-  max-width: 1024px;
-}
+  max-width: 1024px; 
+ }
+
+ .headerSearch:hover{
+  border-color: brown;
+ }
 
 .headerIcon {
-  color: lightgray;
+  color: black;
 }
 
 .headerSearchItem {
   display: flex;
   align-items: center;
   gap: 10px;
+  
 }
 
 .headerSearchInput {
@@ -78,7 +95,7 @@
 }
 
 .headerSearchText {
-  color: lightgray;
+  color: black;
   cursor: pointer;
 }
 
@@ -125,4 +142,8 @@
 
 .optionCounterButton:disabled {
   cursor: not-allowed;
+}
+
+span{
+
 }
