--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -16,8 +16,7 @@
 
 .logo{
   font-weight: 700;
-  font-size: 25px;
-  
+  font-size: 25px; 
 }
 
 .navButton{
@@ -26,4 +25,19 @@
   padding: 5px 10px;
   cursor: pointer;
   color: #003580;
+}
+
+span{
+  padding: 0 5px;
+  cursor: pointer;
+}
+
+span:hover{
+  background-color: rgba(249, 243, 243, 0.185);
+}
+
+.btn{
+padding:10 20px ;
+/* background-color: #003580; */
+border: none;
 }
