--- a/src/pages/list/list.css
+++ b/src/pages/list/list.css
@@ -13,7 +13,7 @@
 
 .listSearch {
   flex: 1;
-  background-color: #febb02;
+  background-color: whitesmoke;
   padding: 10px;
   border-radius: 10px;
   position: sticky;
@@ -70,7 +70,7 @@
 
 .listSearch>button{
   padding: 10px;
-  background-color: #0071c2;
+  background-color: lightblue;
   color: white;
   border: none;
   width: 100%;
